--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-#This is  a list of all contributors of this project
-#Names and emails provided
+#This is  a list of all contributors for the AirBnB clone project
 
 Nkem Jeferson Achia <j.nkem@alustudent.com>
 Leon Nsamba <l.nsamba@alustudent.com>
